Mobile layout done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         src="space-imgs\blue-planet-1.png"
       />
     </section>
+
     <section class="techStack">
       <h2 class="techStack__h2">TECH STACK</h2>
       <div class="techStack__container">
@@ -70,8 +71,22 @@
           id="Java"
         ></i>
       </div>
+      <img id="saturn-1" src="space-imgs\saturn-1.png" alt="" />
     </section>
-    <section class="work"></section>
-    <section class="contact"></section>
+
+    <section class="work">
+      <h2 class="work__h2">MY WORK</h2>
+      <div class="work__project"></div>
+      <div class="work__project"></div>
+      <div class="work__project"></div>
+      <img class="work__image" id="comet" src="space-imgs\comet-1.png" alt="" />
+    </section>
+
+    <section class="contact">
+      <h2 class="contact__h2">CONTACT ME</h2>
+      <i class="contact__icon fa fa-solid fa-envelope" title="Email"></i>
+      <i class="contact__icon fab fa-brands fa-github" title="GitHub"></i>
+      <i class="contact__icon fab fa-brands fa-linkedin" title="LinkedIn"></i>
+    </section>
   </body>
 </html>
