Tech stack changes

--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
           title="JavaScript"
           id="JavaScript"
         ></i>
+        <i class="techStack__icon fab fa-sass" title="Sass" id="Sass"></i>
       </div>
       <div class="techStack__container">
-        <i class="techStack__icon fab fa-sass" title="Sass" id="Sass"></i>
         <i class="techStack__icon fab fa-react" title="React" id="React"></i>
         <i class="techStack__icon fab fa-brands fa-java" title="Java" id="Java"></i>
+        <img class="techStack__icon" src="./tech-logos/Spring.png" alt="Spring" id="Spring">
+        <img class="techStack__icon" src="./tech-logos/mySQL.png" alt="mySQL" id="mySQL">
       </div>
       <img class="about__image" id="blue-planet" src="space-imgs\blue-planet-1.png" />
       <img id="saturn-1" src="space-imgs\saturn-1.png" alt="" />
