Created first project card

--- a/index.html
+++ b/index.html
@@ -59,8 +59,18 @@
       <div class="techStack__container">
         <i class="techStack__icon fab fa-react" title="React" id="React"></i>
         <i class="techStack__icon fab fa-brands fa-java" title="Java" id="Java"></i>
-        <img class="techStack__icon" src="./tech-logos/Spring.png" alt="Spring" id="Spring">
-        <img class="techStack__icon" src="./tech-logos/mySQL.png" alt="mySQL" id="mySQL">
+        <img
+          class="techStack__icon"
+          src="./tech-logos/Spring.png"
+          alt="Spring"
+          id="Spring"
+        />
+        <img
+          class="techStack__icon"
+          src="./tech-logos/mySQL.png"
+          alt="mySQL"
+          id="mySQL"
+        />
       </div>
       <img class="about__image" id="blue-planet" src="space-imgs\blue-planet-1.png" />
       <img id="saturn-1" src="space-imgs\saturn-1.png" alt="" />
@@ -68,7 +78,19 @@
 
     <section class="work">
       <h2 class="work__h2">MY WORK</h2>
-      <div class="work__project"></div>
+      <figure class="work__projectCard">
+        <img class="work__projectCard--img" src="work-imgs\portfolio.png" alt="" />
+        <figcaption class="work__projectCard--caption">
+          <h3 class="work__projectCard--h3">More Info</h3>
+          <p class="work__projectCard--captionBody">
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+            turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor
+            sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
+            mi vitae est. Mauris placerat eleifend leo.
+          </p>
+          <button class="work__projectCard--caption">More Info</button>
+        </figcaption>
+      </figure>
       <div class="work__project"></div>
       <div class="work__project"></div>
       <img class="work__image" id="comet" src="space-imgs\comet-1.png" alt="" />
