--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
         <p class="about__p">
           Before transitioning into tech, I trained as a molecular biologist with a focus on
-          metabolic disease. I still retain my passion for the life sciences.
+          metabolic disease. Despite leaving the lab, I retain my passion for the life sciences.
         </p>
         <p class="about__p">
           I have since developed an interest in
