--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
         />
         <img
           class="techStack__icon"
-          src="tech-logos\aws.png"
-          alt="Amazon Web Services"
-          id="aws"
-          title="Amazon Web Services"
-        />
-        <img
-          class="techStack__icon"
           src="tech-logos\postgresql.png"
           alt="PostgreSQL"
           id="postgresql"
           title="PostgreSQL"
+        />
+        <img
+          class="techStack__icon"
+          src="tech-logos\aws.png"
+          alt="Amazon Web Services"
+          id="aws"
+          title="Amazon Web Services"
         />
       </div>
       <img id="blue-planet" src="space-imgs\blue-planet-1.png" />
@@ -99,25 +99,32 @@
     <section class="work">
       <h2>MY WORK</h2>
       <div class="work__container">
-        <div class="work__titleContainer">
-          <h3>USCAO GUIDE</h3>
-          <i class="fa-solid fa-arrow-up-right-from-square"></i>
-        </div>
+        <a href="https://usaco.guide/" target="_blank">
+          <div class="work__titleContainer">
+            <h3>USCAO GUIDE</h3>
+            <i class="fa-solid fa-arrow-up-right-from-square"></i></div
+        ></a>
       </div>
       <div class="pContainer">
-        <p>
-          Contributed editorials and model solutions for programming problems on USACO Guide, an
-          open-source project to help students prepare for the USA Computing Olympiad (USACO), a
-          national programming competition for high school students.
+        <p class="endP">
+          Contributed editorials and model solutions for USACO Guide, an open-source project that
+          helps students prepare for the USA Computing Olympiad (USACO), a national programming
+          competition for high school students.
         </p>
       </div>
     </section>
 
     <section class="contact">
       <h2>CONTACT ME</h2>
-      <i class="contact__icon fa fa-solid fa-envelope" title="Email"></i>
-      <i class="contact__icon fab fa-brands fa-github" title="GitHub"></i>
-      <i class="contact__icon fab fa-brands fa-linkedin" title="LinkedIn"></i>
+      <a href="mailto:lae321@hotmail.com">
+        <i class="contact__icon fa fa-solid fa-envelope" title="Email"></i
+      ></a>
+      <a href="https://github.com/lae321" target="_blank">
+        <i class="contact__icon fab fa-brands fa-github" title="GitHub"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/lewis-everett-17582b119/" target="_blank">
+        <i class="contact__icon fab fa-brands fa-linkedin" title="LinkedIn"></i
+      ></a>
     </section>
   </body>
 </html>
