--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     </section>
 
     <section class="contact">
+      <img id="comet" src="space-imgs\comet-1.png" alt="" />
       <h2>CONTACT ME</h2>
       <a href="mailto:lae321@hotmail.com">
         <i class="contact__icon fa fa-solid fa-envelope" title="Email"></i
