--- a/index.html
+++ b/index.html
@@ -84,13 +84,7 @@
           id="postgresql"
           title="PostgreSQL"
         />
-        <img
-          class="techStack__icon"
-          src="tech-logos\aws.png"
-          alt="Amazon Web Services"
-          id="aws"
-          title="Amazon Web Services"
-        />
+        <i class="techStack__icon fa-brands fa-aws" id="aws" title="Amazon Web Services"></i>
       </div>
       <img id="blue-planet" src="space-imgs\blue-planet-1.png" />
       <img id="saturn-1" src="space-imgs\saturn-1.png" alt="" />
@@ -101,9 +95,9 @@
       <div class="work__container">
         <div class="work__titleContainer">
           <h3><a href="https://usaco.guide/" target="_blank">USCAO GUIDE</a></h3>
-          <a href="https://usaco.guide/" target="_blank"
-            ><i class="fa-solid fa-arrow-up-right-from-square"></i
-          ></a>
+          <a href="https://usaco.guide/" target="_blank">
+            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+          </a>
         </div>
       </div>
       <div class="pContainer">
@@ -119,14 +113,14 @@
       <img id="comet" src="space-imgs\comet-1.png" alt="" />
       <h2>CONTACT ME</h2>
       <a href="mailto:lae321@hotmail.com">
-        <i class="contact__icon fa fa-solid fa-envelope" title="Email"></i
-      ></a>
+        <i class="contact__icon fa fa-solid fa-envelope" title="Email"></i>
+      </a>
       <a href="https://github.com/lae321" target="_blank">
-        <i class="contact__icon fab fa-brands fa-github" title="GitHub"></i
-      ></a>
+        <i class="contact__icon fab fa-brands fa-github" title="GitHub"></i>
+      </a>
       <a href="https://www.linkedin.com/in/lewis-everett-17582b119/" target="_blank">
-        <i class="contact__icon fab fa-brands fa-linkedin" title="LinkedIn"></i
-      ></a>
+        <i class="contact__icon fab fa-brands fa-linkedin" title="LinkedIn"></i>
+      </a>
     </section>
   </body>
 </html>
