--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="techStack__container">
         <img
           class="techStack__icon"
-          src="tech-logos\gcp.png"
+          src="tech-logos\gcp2.png"
           alt="Google Cloud Platform"
           id="gcp"
           title="Google Cloud Platform"
